[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zae-limiter"
version = "0.1.0"
description = "Rate limiting library backed by DynamoDB with token bucket algorithm"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "ZeroAE", email = "dev@zeroae.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "aioboto3>=12.0.0",
    "boto3>=1.34.0",
    "types-aiobotocore[dynamodb]>=2.0.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "moto[dynamodb]>=5.0.0",
    "openapi-spec-validator>=0.7.1",  # Required by moto but not declared
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]
lambda = [
    "aws-lambda-powertools>=2.0.0",
]
cdk = [
    "aws-cdk-lib>=2.0.0",
    "constructs>=10.0.0",
]

[project.urls]
Homepage = "https://github.com/zeroae/zae-limiter"
Repository = "https://github.com/zeroae/zae-limiter"

[project.scripts]
zae-limiter = "zae_limiter.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/zae_limiter"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
