[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "zae-limiter"
dynamic = ["version"]
description = "Rate limiting library backed by DynamoDB with token bucket algorithm"
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
requires-python = ">=3.11"
authors = [
    { name = "ZeroAE", email = "dev@zeroae.com" },
]
keywords = ["rate-limiting", "dynamodb", "token-bucket", "aws", "llm", "api-rate-limit"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "aioboto3>=12.0.0",
    "boto3>=1.34.0",
    "types-aiobotocore[dynamodb]>=2.0.0",
    "click>=8.0.0",
    "python-ulid>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-benchmark>=4.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.5.0",
    "moto[dynamodb]>=5.0.0",
    "openapi-spec-validator>=0.7.1",  # Required by moto but not declared
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]
lambda = [
    "aws-lambda-powertools>=2.0.0",
]
cdk = [
    "aws-cdk-lib>=2.0.0",
    "constructs>=10.0.0",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.27.0",
    "mike>=2.1.0",
]

[project.urls]
Homepage = "https://github.com/zeroae/zae-limiter"
Documentation = "https://zeroae.github.io/zae-limiter/"
Repository = "https://github.com/zeroae/zae-limiter"

[project.scripts]
zae-limiter = "zae_limiter.cli:cli"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/zae_limiter"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "integration: marks tests as integration tests (require Docker or AWS)",
    "benchmark: marks tests as performance benchmarks",
    "aws: marks tests as real AWS tests (require --run-aws flag)",
    "e2e: marks tests as end-to-end tests (full stack lifecycle)",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
